[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smithery"
version = "0.1.0"
description = "SDK for using Smithery in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Smithery Team", email = "contact@smithery.ai" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/smithery-ai/python-sdk"
"Bug Tracker" = "https://github.com/smithery-ai/python-sdk/issues"

[tool.setuptools]
packages = ["smithery"]

[tool.setuptools.package-data]
smithery = ["py.typed"]
